updated footer information to fix vertical alignment and centering

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -254,8 +254,8 @@ th {
   overflow: auto;
   width: 100%;
   background-color: $st_tropaz;
-
-  padding: 20px 0 0 0;
+  padding: 15px 0px;
+  text-align: center;
   a {
     color: $golden_tainoi;
   }
